--- a/portfolio.html
+++ b/portfolio.html
@@ -386,11 +386,13 @@
         <div class="subscribe">
           <p class="join">Подпишитесь на рассылку</p>
           <form>
-              <input type="email" name="email" placeholder="E-mail"/>
-            </label>
-            <button class="subscribe-btn button" type="submit">Подписаться <svg width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-send"></use></svg
-              ></button>
+            <input type="email" name="email" placeholder="E-mail" />
+            <button class="subscribe-btn button" type="submit">
+              Подписаться
+              <svg width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
