--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!----------------------Шапка---------------------->
+    <!--Шапка-->
     <header>
       <div class="container header-nav">
         <a href="./index.html" lang="en" class="logo link">
@@ -58,9 +58,9 @@
         </ul>
       </div>
     </header>
-    <!---------------------- Основная часть ---------------------->
+    <!-- Основная часть -->
     <main>
-      <!----------------------Банер---------------------->
+      <!--Банер-->
       <section class="hero overlay">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
@@ -69,7 +69,7 @@
           </button>
         </div>
       </section>
-      <!----------------------Особенности---------------------->
+      <!--Особенности-->
       <section class="features">
         <div class="container">
           <h2 class="visuallly-hidden">Особенности</h2>
@@ -125,7 +125,7 @@
           </ul>
         </div>
       </section>
-      <!----------------------Чем мы занимаемся---------------------->
+      <!--Чем мы занимаемся-->
       <section class="doing">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
@@ -157,7 +157,7 @@
           </ul>
         </div>
       </section>
-      <!----------------------Наша команда---------------------->
+      <!--Наша команда-->
       <section class="team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
@@ -349,7 +349,7 @@
           </ul>
         </div>
       </section>
-      <!----------------------Клиенты---------------------->
+      <!--Клиенты-->
       <section class="clients">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
@@ -394,7 +394,7 @@
         </div>
       </section>
     </main>
-    <!----------------------Футер---------------------->
+    <!--Футер-->
     <footer>
       <div class="container footer">
         <div>
@@ -470,7 +470,7 @@
         </div>
       </div>
     </footer>
-    <!----------------------Модалка---------------------->
+    <!--Модалка-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="close-btn button" data-modal-close>
@@ -481,48 +481,41 @@
         <form>
           <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
           <div class="form">
-            <input
-              class="form-input"
-              type="text"
-              name="username"
-              id="username"
-            />
-            <label for="username" class="textfield">
-              <span class="label-name">Имя</span>
+            <label for="username" class="form-label">Имя</label>
+            <span class="form-wrapper"
+              ><input
+                class="form-input"
+                type="text"
+                name="username"
+                id="username" />
               <svg class="modal-icon" width="18" height="18">
-                <use href="./images/symbol-defs.svg#icon-person"></use>
-              </svg>
-            </label>
+                <use href="./images/symbol-defs.svg#icon-person"></use></svg
+            ></span>
           </div>
           <div class="form">
-            <input class="form-input" type="tel" name="tel" id="tel" />
-            <label for="tel" class="textfield">
-              <span class="label-name">Телефон</span>
+            <label for="tel" class="form-label">Телефон</label>
+            <span class="form-wrapper"
+              ><input class="form-input" type="tel" name="tel" id="tel" />
               <svg class="modal-icon" width="18" height="18">
-                <use href="./images/symbol-defs.svg#icon-phone"></use>
-              </svg>
-            </label>
+                <use href="./images/symbol-defs.svg#icon-phone"></use></svg
+            ></span>
           </div>
           <div class="form">
-            <input class="form-input" type="email" name="email" id="email" />
-            <label for="email" class="textfield">
-              <span class="label-name">Почта</span>
+            <label for="email" class="form-label">Почта</label>
+            <span class="form-wrapper"
+              ><input class="form-input" type="email" name="email" id="email" />
               <svg class="modal-icon" width="18" height="18">
-                <use href="./images/symbol-defs.svg#icon-email"></use>
-              </svg>
-            </label>
+                <use href="./images/symbol-defs.svg#icon-email"></use></svg
+            ></span>
           </div>
-          <div class="form">
+          <div class="form comment">
+            <label for="comment" class="form-label">Комментарий</label>
             <textarea
               class="form-input form-tarea"
               name="comment"
-              rows="6"
               placeholder="Введите текст"
               id="comment"
             ></textarea>
-            <label for="comment" class="textfield">
-              <span class="label-name">Комментарий</span>
-            </label>
           </div>
           <label class="form-deal">
             <input
