--- a/index.html
+++ b/index.html
@@ -517,20 +517,22 @@
               id="comment"
             ></textarea>
           </div>
-          <label class="form-deal">
-            <input
-              type="checkbox"
-              name="deal"
-              value="deal"
-              id="deal"
-              class="visuallly-hidden form-check"
-            />
-            <svg class="icon-check" width="16" height="15">
-              <use href="./images/symbol-defs.svg#icon-check"></use>
-            </svg>
-            Соглашаюсь с рассылкой и принимаю
+          <div class="deal">
+            <label class="form-deal">
+              <input
+                type="checkbox"
+                name="deal"
+                value="deal"
+                id="deal"
+                class="visuallly-hidden form-check"
+              />
+              <svg class="icon-check" width="16" height="15">
+                <use href="./images/symbol-defs.svg#icon-check"></use>
+              </svg>
+              Соглашаюсь с рассылкой и принимаю
+            </label>
             <a href="">Условия договора</a>
-          </label>
+          </div>
           <button class="button submit" type="submit">Отправить</button>
         </form>
       </div>
